	  devices (Thanks Mark Doliner)
	* Updated Polish Translation (Thanks Przemyslaw Sulek)
	* Fixed bug in MSN smilies that crashed PPC (and other?) platforms
	* Updated Spanish Translation (Thanks Amaya)
	* Updated French translation
	* Updated Finnish translation (Thanks Tero Kuusela)
	* HTTP Proxy settings now HTTP compliant (Thanks Robert McQueen)	
	* Speling corections (Thanks Tero Kuusela)

version 0.54 (03/14/2002):
	* Compiles without GdkPixbuf again
	* GtkIMHtml will refresh when you set a new GTK+ theme
	* Improved Yahoo! typing notification (thanks Brian Macke)
	* Prompt to authorize MSN buddies who added you while you
	  were offline (Thanks Jason Willis)
	* Option to globally disable Buddy Icon animation (Thanks
	  Luke Schierer)
	* Numerous bugfixes
	* Yahoo! will tell you when your buddies are playing Yahoo! 
 	  games and give you the ability to join them
	* Yahoo! can receive offline messages
	* IRC can do DCC chat.
	* IRC will convert HTML formatting to mIRC formatting.
	* Buddylist tab placement option (Thanks Jason Willis)
	* Protocol specific smiley faces
	* Italian translation added
	* IM Image sending

version 0.53 (02/28/2002):
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Slovak translation added (Thanks Daniel Rezny)
	* Minor bug fixes re: queued away messages
	* Better buddy icon transparency (for real this time ;-))
	* Ability to change formatting of Oscar screen name
	* Better selection in HTML widget (Thanks BMiller)
	* New icons for ICQ (Thanks Kevin Miller)
	* Editable buddy pounces (Thanks Jason Willis)
	* Server side buddy lists in Oscar (Thanks KingAnt :-))
	* Fix for the chatlist plugin
	* Typing Notification (AIM Direct Connect, Yahoo, MSN)
	* IM Images (Receive Only)
	* Prettier GtkImHtml selection

version 0.52 (02/17/2002):
	* Better buddy icon transparency (thanks SeanEgan)
	* Updated Polish Translation (thanks Przemyslaw Sulek)
	* Fixed a little bug with connecting via proxy (thanks