@@ -18,6 +18,7 @@ version 0.55:
 	* Updated Finnish translation (Thanks Tero Kuusela)
 	* HTTP Proxy settings now HTTP compliant (Thanks Robert McQueen)	
 	* Speling corections (Thanks Tero Kuusela)
+	* Oscar list icon fixes (Thanks Mark Doliner)
 
 version 0.54 (03/14/2002):
 	* Compiles without GdkPixbuf again
